# seance-rs

./: .gitignore  Cargo.toml  rust-toolchain.toml
src/: config.rs  listener.rs  main.rs  system.rs
src/system/: aggregator.rs  bot.rs  gateway.rs  message_parser.rs  mod.rs  types.rs
src/system/bot/: client.rs  gateway.rs  mod.rs
