[package]
name = "seance-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
serde = { version = "1.0.196", features = [ "derive" ] }
serde_regex = "1.1.0"
serenity = "0.12.0"
toml = "0.8.8"
