[package]
name = "seance-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.12.3"
futures = "0.3.30"
regex = "1.10.2"
reqwest = "0.12"
serde = { version = "1.0.196", features = [ "derive" ] }
tokio = { version = "1.38.0", features = [ "rt", "macros", "time" ] }
toml = "0.8.8"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-validate = "0.15.3"
